MDEV-33318 ORDER BY COLLATE improperly applied to non-character columns

when changing charset from latin1 to utf8, adjust max_length accordingly